added forntend styling and webpage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,8 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>Farm to Fridge</title>
-
+    <!-- GOOGLE fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -42,7 +43,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">..</h3>
+              <h3 class="masthead-brand"></h3>
               <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -52,7 +53,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">F 2 F</a>
+          <a class="navbar-brand" href="#">Farm to Fridge</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -68,11 +69,12 @@
           </div>
 
           <div class="inner cover">
+           <!-- <img src="images/farmPic.jpg" title="backgroundImage" alt="farm1"> -->
             <h1 class="cover-heading">Farm to Fridge</h1>
             <p class="lead">The Neighborhood Farmers Market Alliance is committed to supporting and strengthening Washington's small family farm businesses by creating and operating vibrant, successful neighborhood farmers markets.
 
 To meet our mission we provide effective direct sales sites for our region's small farmers, while also educating consumers about local farm products and the importance of supporting and preserving local farmland. In addition, we have been at the forefront of advocating for low income benefits programs to ensure equal food access.</p>
-            <p class="lead">
+            <p class="button">
               <a href="#" class="btn btn-lg btn-danger">Learn more</a>
             </p>
           </div>
