added api to node app w farms data

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class=""><a href="data">Farms</a></li>
+            <li class=""><a href="api/farms">Farms</a></li>
             <li><a href="#about">Locations</a></li>
             <li><a href="#about">Order Forms</a></li>
             <li><a href="#contact">Get Involved</a></li>
