changed routes over to ES6

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
 	<title>Farm to Fridge</title>
     <h1>Farm to Fridge</h1>
-    <a href= "/">Home </a><a>//</a>
-    <a href= "/api/farms">Farms</a><a>//</a>
-    <a href= "/locations">Locations</a><a>//</a>
-    <a href= "/reviews">Locations</a><a>//</a>
+    <a href= "/">Home </a><a>  // </a>
+    <a href= "/farms">Farms</a><a> // </a>
+    <a href= "/orders">Orders</a><a> // </a>
+    <a href= "/locations">Locations</a><a> // </a>
+
 
 </head>
 <body>
